# dmlmung

./: .gitattributes  .gitignore  LICENSE  Pipfile  dev.py  fp.json  fp.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  t.py  workplan.md
fp/: fit_pal.pyx  fp.json  fp.py  main.py  setup.py
src/: default_settings.json  main.py  main.spec  main_async.py  main_thread.py
src/data/: fit.py  fit2_rr_ss.py  fit2p.py  fit2s.py  fit3_rrw_sss.py  fit3p2.py  fit3s.py  fit3sss.py  fit4_rrrr_pp.py  mung.py  my_types.py  nogui.py  plot.py  puo2_50eu_gbl_100.csv  puo2_50eu_gbl_101.csv  puo2_50eu_gbl_103.csv  puo2_50eu_gbl_105.csv  puo2_50eu_gbl_107.csv  puo2_50eu_gbl_108_10volts.csv  puo2_50eu_gbl_109.csv  puo2_50eu_gbl_110_20volts.csv  puo2_50eu_gbl_112.csv  puo2_50eu_gbl_113.csv  res_best.csv  zz.csv
src/data/after2Vhold/: mung.py  nogui.py  plot.py  puo2th_1_tbatfbingbl_imp_20m_000v_after2vhold.csv  puo2th_1_tbatfbingbl_imp_20m_005v_after2vhold.csv  puo2th_1_tbatfbingbl_imp_20m_075v_after2vhold.csv  puo2th_1_tbatfbingbl_imp_20m_1.5v_after2vhold.csv  puo2th_1_tbatfbingbl_imp_20m_139mv_after2vhold.csv  puo2th_1_tbatfbingbl_imp_20m_1v_after2vhold.csv  puo2th_1_tbatfbingbl_imp_20m_2v_after2vhold.csv  puo2th_1_tbatfbingbl_imp_20m_3v_after2vhold.csv  puo2th_1_tbatfbingbl_imp_20m_4v_after2vhold_to3mhz.csv  puo2th_1_tbatfbingbl_imp_20m_m005v_after2vhold(during baggin)g.csv
src/data/impedance screens/: Rs_CPE_RpRp_C1.mdl  fitresult.csv  fitresult.lst  fitresult.z
src/data/input/: puo2_50eu_gbl_100.csv  puo2_50eu_gbl_101.csv  puo2_50eu_gbl_102.csv  puo2_50eu_gbl_103.csv  puo2_50eu_gbl_104.csv  puo2_50eu_gbl_105.csv  puo2_50eu_gbl_106_05volts.csv  puo2_50eu_gbl_107.csv  puo2_50eu_gbl_108_10volts.csv  puo2_50eu_gbl_109.csv  puo2_50eu_gbl_110_20volts.csv  puo2_50eu_gbl_111.csv  puo2_50eu_gbl_112.csv  puo2_50eu_gbl_113.csv
src/data/output/: TestIMP_Zahner.csv  TestIMP_Zahner_zveiw.csv  puo2_50eu_gbl_100_zveiw.csv  puo2_50eu_gbl_101_zveiw.csv  puo2_50eu_gbl_102_zveiw.csv  puo2_50eu_gbl_103_zveiw.csv  puo2_50eu_gbl_104_imp.csv  puo2_50eu_gbl_104_zveiw.csv  puo2_50eu_gbl_105_zveiw.csv  puo2_50eu_gbl_106_05volts_zveiw.csv  puo2_50eu_gbl_107_imp.csv  puo2_50eu_gbl_107_zveiw.csv  puo2_50eu_gbl_108_10volts_zveiw.csv  puo2_50eu_gbl_109_zveiw.csv  puo2_50eu_gbl_110_20volts_imp.csv  puo2_50eu_gbl_110_20volts_zveiw.csv  puo2_50eu_gbl_111_zveiw.csv  puo2_50eu_gbl_112_zveiw.csv  puo2_50eu_gbl_113_zveiw.csv
src/data/output_old/: puo2_50eu_gbl_100_imp.csv  puo2_50eu_gbl_100_zveiw.csv  puo2_50eu_gbl_101_imp.csv  puo2_50eu_gbl_102_imp.csv  puo2_50eu_gbl_102_zveiw.csv  puo2_50eu_gbl_103_imp.csv  puo2_50eu_gbl_103_zveiw.csv  puo2_50eu_gbl_104_zveiw.csv  puo2_50eu_gbl_105_imp.csv  puo2_50eu_gbl_105_zveiw.csv  puo2_50eu_gbl_106_05volts_imp.csv  puo2_50eu_gbl_107_zveiw.csv  puo2_50eu_gbl_108_10volts_imp.csv  puo2_50eu_gbl_109_zveiw.csv  puo2_50eu_gbl_110_20volts_zveiw.csv  puo2_50eu_gbl_111_imp.csv  puo2_50eu_gbl_111_zveiw.csv  puo2_50eu_gbl_112_imp.csv  puo2_50eu_gbl_112_zveiw.csv  puo2_50eu_gbl_113_imp.csv  puo2_50eu_gbl_113_zveiw.csv
src/dml_async/: gui.py  log.py  mung.py  plot.py  somecython.c  somecython.py  test.py
src/dml_thread/: __init__.py  gui.py  log.py  mung.cp37-win32.pyd  mung.cp38-win32.pyd  mung.py  mytypes.py  nogui.py  plot.py  somecython.cp36-win_amd64.pyd  somecython.pyi  test.py  testpyside.py  types.py
src/dml_thread/pyx files/: gui.pyx  log.c  log.html  mung.c  mung.cp38-win32.pyd  plot.c  (+16 more)
src/dmlechemmods/: gui.py  mung.py  setup.py  somecython.py  types.py
src/dmltk/: dmlnote.py  mpl.py  panels.py  tknote.py
src/settings/: my_settings.json
src/test/: puo2_50eu_gbl_106_05volts.csv  puo2thin_sec_tbatfbingbl_imp_01-17_sr300_800mvhold.csv
src/tkcolorpicker/: alphabar.py  colorpicker.py  colorsquare.py  functions.py
src_WA/: WA.jl  WA.py  WA_attrs.py  WA_dataclass.py  WA_numba.py  WA_pydantic.py  WA_pyfields.py  WA_std.py  _ceria.py  _ceria_nitr.py  _nitrates.py  _oxalates.py  _thoria.py  _urania.py  bet_oxalate.tsv  ceria.py  t.py
src_WA/results/: bet_ceria.tsv  bet_nitr.tsv  bet_oxalate.tsv  bet_thoria.tsv  bet_urania.tsv
test_data/: puo2thin_sec_tbatfbingbl_imp_01-17_sr100_800mvhold.csv
test_data/output/: puo2_50eu_gbl_106_05volts_zveiw.csv
tests/: test_WA.py
(+102 files in other folders)
