[tool.poetry]
name = "dmlmung"
version = "0.1.0"
description = ""
authors = ["yobmod <yobmod@gmail.com>"]

[tool.poetry.dependencies]
# general
python = "^3.7"
typing-extensions = "*"
python-dotenv = "*"
toml = "*"

# general
pydantic = "*"
attrs = "*"
pyfields = "*"
typeguard = "*"
autoclass = "*"
cattrs = "*"
# attrs-serde = "*"

# if data
pandas = "*"
numpy = {git = "https://github.com/numpy/numpy.git", branch="master"}
matplotlib = "*"  # bring numpy, pillow
seaborn = "*"
pandas-alive = "*"
# xarray = "*"
# numba = {extras = ["all"], version = "*"}


#if web
# fastapi = {extras = ["all"], version = "^0.61.1"} # bring uvicorn, aiofiles, pydantic, startlette
# jinja2 = "^2.11.2"
#sqlalchemy = "^1.3.19"
more-itertools = "^8.5.0"


myfitnesspal = "*"

#alembic = "^1.4.2"
#sqlalchemy-stubs = "^0.3"


[tool.poetry.dev-dependencies]
# cython = "*"  # {git = "https://github.com/cython/cython.git", branch="master"}
pytest = "*"
mypy = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pylama = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
flake8-bugbear = "*"
pdbpp = "*"
gitpython = "*"
flake8-annotations-complexity = "*"
pyinstaller = "*"
GitPython = "*"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"