[tool.poetry]
name = "dmlmung"
version = "0.1.0"
description = ""
authors = ["yobmod <yobmod@gmail.com>"]

[tool.poetry.dependencies]
# basics
python =  ">=3.7.1,<3.10"
typing-extensions = "*"
python-dotenv = "*"


# general
more-itertools = "*"
# toolz = "*"  # cytoolz
# pydantic = "*"
attrs = "*"
# toml = "*"
# ordered-set = "*"
# bidict = "*"
# pyfields = "*"
# typeguard = "*"
# autoclass = "*"
# cattrs = "*"
# attrs-serde = "*"

# if data
# pandas = "*"
numpy = "1.21.0" # {git = "https://github.com/numpy/numpy.git", branch="master"}
matplotlib = "*"  # bring numpy, pillow
# seaborn = "*"
# pandas-alive = "*"
# xarray = "*"
# numba = {extras = ["all"], version = "*"}

# if images
# pillow ="*"
# python-opencv = "*"
# imutils = "*"

#if web
# fastapi = {extras = ["all"], version = "^0.61.1"} # bring uvicorn, aiofiles, pydantic, startlette
# jinja2 = "^2.11.2"
# sqlalchemy = "^1.3.19"
# alembic = "^1.4.2"
# sqlalchemy-stubs = "^0.3"


myfitnesspal = "*"
loguru = "^0.5.3"
snoop = "^0.3.0"
scipy = "^1.6.3"
PyEIS = "^1.0.10"
numba = "^0.53.1"
pydantic = "^1.8.2"
pyfields = "^1.6.2"
pandas = "^1.2.4"
lmfit = "^1.0.2"
seaborn = "^0.11.1"
impedance = "^1.3.0"




[tool.poetry.dev-dependencies]
# cython = "*"  # {git = "https://github.com/cython/cython.git", branch="master"}
pytest = "*"
mypy = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pylama = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
flake8-bugbear = "*"
pdbpp = "*"
gitpython = "*"
flake8-annotations-complexity = "*"
pyinstaller = "*"
GitPython = "*"
rich = "*"
pretty-errors = "*"
pytest-pythonpath = "*"
Cython = "^0.29.23"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"